<wip>

Changes for 1.3.5.2
-Fixed the ARM64 building
-Updated the log writer
-Disabled the "Boss Dead" event hook to stop the episode speed-run timer by default, added the compat.ini options to enable and configure it
-Fixed the unexpected Swooper flap sound played after the Swooper has gone far away
-Fixed the vanilla bug: The Swooper has avoided being started to fly when inactive

Changes for 1.3.5.1
-Episodes and battle levels lists now loading in the separated thread with a progress showing
-Fixed the regression caused world map music not being switched properly
-Added an ability to control the intro scene activity on the level by `gameinfo.ini`: set maximum number of running players, and enable/disable the activity at all
-Fixed an inability to copy the game save based on old files at episode directory
-Fixed the vanilla bug: incorrect blooper effect when stomped (needed an npc-*.txt with the "jumphurt=0" flag being set)
-Changed the default compat.ini value "fix-autoscroll-speed" into "false" to prevent possible glitches from invalid setup given by several old levels
-The "Checkpoint" sound will be played when selecting the "Save and Continue" menu item at the pause menu
-Fixed a minor glitch at the game save copy and erase menu while moving the mouse under menu block
-Fixed the bullet bill getting stuck after it got unfrozen (Thanks to the @ds-sloth for the contribution!)
-Updated an inter-process protocol with adding new commands
-Fixed the vanilla bug: The dragon coin has avoided being turned into the block by the P-Switch activation

Changes for 1.3.5
-Fixed the gamepad control stuck because of axes returned value that doesn't equal the initial state on some devices
-Fixed the invalid conversion of old sprites with a mask that is smaller than the front
-Implemented usage of the SDL_GameController with some extras like using the rumble and the battery status (Render of the status is not implemented yet)